--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-tuiplayer",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "React Native bridge for TUIPlayer Kit short video components.",
   "main": "./lib/module/index.js",
   "types": "./lib/typescript/src/index.d.ts",
@@ -47,19 +47,19 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Mahuoooo/react-native-tuiplayer.git"
+    "url": "git+https://github.com/izetent/react-native-tuiplayer.git"
   },
-  "author": "izetent <izetent@gmail.com> (https://github.com/Mahuoooo)",
+  "author": "izetent <izetent@gmail.com> (https://github.com/izetent)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Mahuoooo/react-native-tuiplayer/issues"
+    "url": "https://github.com/izetent/react-native-tuiplayer/issues"
   },
-  "homepage": "https://github.com/Mahuoooo/react-native-tuiplayer#readme",
+  "homepage": "https://github.com/izetent/react-native-tuiplayer#readme",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
   "resolutions": {
-    "arktype": "1.0.29"
+    "arktype": "2.1.22"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^19.8.1",
@@ -153,7 +153,7 @@
   },
   "codegenConfig": {
     "name": "TuiplayerSpec",
-    "type": "all",
+    "type": "modules",
     "jsSrcsDir": "src",
     "android": {
       "javaPackageName": "com.tuiplayer"
