--- a/android/build.gradle
+++ b/android/build.gradle
@@ -83,6 +83,7 @@ dependencies {
   implementation "androidx.lifecycle:lifecycle-common-java8:2.8.7"
   implementation "androidx.viewpager2:viewpager2:1.1.0"
   implementation "com.tencent.liteav:LiteAVSDK_Player:latest.release"
+  implementation "com.github.bumptech.glide:glide:4.16.0"
   implementation files("libs/tuiplayercore-release_2.1.8.75.aar")
   implementation files("libs/tuiplayershortvideo-release_2.1.8.75.aar")
 }
