--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -77,13 +77,14 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "txplayer.example"
+    namespace "com.zapcliphd"
     defaultConfig {
-        applicationId "txplayer.example"
+        applicationId "com.zapcliphd"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        manifestPlaceholders = [usesCleartextTraffic: "true"]
     }
     signingConfigs {
         debug {
