--- a/android/build.gradle
+++ b/android/build.gradle
@@ -77,10 +77,10 @@ def kotlin_version = getExtOrDefault("kotlinVersion")
 dependencies {
   implementation "com.facebook.react:react-android"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  implementation files("libs/tuiplayercore-release.aar")
-  implementation files("libs/tuiplayershortvideo-release.aar")
-  implementation files("libs/plugin_monet-release.aar")
-  implementation files("libs/TsrSdk-Release-silifang-liteav-demo-235.aar")
+  implementation(name: "tuiplayercore-release", ext: "aar")
+  implementation(name: "tuiplayershortvideo-release", ext: "aar")
+  implementation(name: "plugin_monet-release", ext: "aar")
+  implementation(name: "TsrSdk-Release-silifang-liteav-demo-235", ext: "aar")
   implementation "androidx.viewpager2:viewpager2:1.1.0-beta02"
   implementation "com.tencent.liteav:LiteAVSDK_Player_Premium:latest.release"
   implementation 'com.github.bumptech.glide:glide:4.12.0'
