feat: 恢复核心依赖并启用日志提示超分禁用

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -79,11 +79,12 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation(name: "tuiplayercore-release", ext: "aar")
   implementation(name: "tuiplayershortvideo-release", ext: "aar")
-  implementation(name: "plugin_monet-release", ext: "aar")
-  implementation(name: "TsrSdk-Release-silifang-liteav-demo-235", ext: "aar")
-  implementation "androidx.viewpager2:viewpager2:1.1.0-beta02"
+  // Super resolution/Monet disabled for now to avoid TSR dependency.
+  // implementation(name: "plugin_monet-release", ext: "aar")
+  // implementation(name: "TsrSdk-Release-silifang-liteav-demo-235", ext: "aar")
+  // implementation "androidx.viewpager2:viewpager2:1.1.0-beta02"
   implementation "com.tencent.liteav:LiteAVSDK_Player_Premium:latest.release"
-  implementation 'com.github.bumptech.glide:glide:4.12.0'
+  // implementation 'com.github.bumptech.glide:glide:4.12.0'
   implementation 'androidx.appcompat:appcompat:1.0.0'
-  implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+  // implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 }
