--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-txplayer-example",
+  "name": "react-native-tuiplayer-example",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "19.2.0",
-    "react-native": "0.83.0"
+    "react-native": "0.83.0",
+    "react-native-tuiplayer": "workspace:*"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
